$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2008-05-16 [A] Alpha version of the storage plugin, FTP storage module {zmarty}
2008-06-05 [A] Added oauth/ directory, an early version of code for Coppermine API authentication {daorange}
2008-05-26 [D] Created sub-folders in docs folder to prepare translation of documentation {GauGau}
2008-05-23 [O] Use JavaScript to display the sorting options only to humans, but hide them from search engines to avoid double-content indexing {GauGau}
2008-05-21 [B] Replaced hard-coded string "edit keywords" with translation (thread ID 52721) {GauGau}
2008-05-04 [B] Fixed resources consumption for slideshows in meta albums {GauGau}
2008-05-03 [B] Fixing the type being translated in reports {GauGau}
2008-05-01 [O] Optimization of sanitization of strip-Tags and max. length for comments {GauGau}
2008-04-30 [C] Removed invalid <f>-tag in upload.php {GauGau}
2008-04-30 [C] Fixing improper nesting of form-tag in various files {GauGau}
2008-04-28 [C] Fixing spacer for empty album list cells (thread ID 51414) {GauGau}
2008-04-14 [O] Numerous session handling optimizations {Nibbler}
2008-04-13 [S] Corrected SQL injection vulnerabilities in session handling code {Nibbler}
2008-04-10 [S] Corrected an SQL injection vulnerability in URI upload code {Nibbler}
2008-04-07 [O] Added expandable admin tools sections {GauGau}
2008-03-25 [A] Added warning on the config page for settings that mustn't be changed lightheartedly {GauGau}
2008-03-25 [A] Added favicon tag to all themes that come with coppermine {GauGau}
2008-03-25 [B] Rewrote json_encode function as the old one was not working correctly {Abbas}