@@ -4,7 +4,9 @@ define('IN_COPPERMINE', true);
 
 require_once 'cpgOAuth.php';
 
-$oauth = new cpgOAuth($superCage->post->getAlnum('oauth_consumer_key'), $superCage->post->getAlnum('oauth_nonce'), $superCage->post->getInt('oauth_timestamp'), $superCage->post->getRaw('oauth_signature_method'), $superCage->post->getAlnum('oauth_token'));
+$matches = $superCage->post->getMatched('oauth_signature_method', '/[\w-]+/');
+
+$oauth = new cpgOAuth($superCage->post->getAlnum('oauth_consumer_key'), $superCage->post->getAlnum('oauth_nonce'), $superCage->post->getInt('oauth_timestamp'), $matches[0], $superCage->post->getAlnum('oauth_token'));
 
 $oauth->checkRequest('access');
 $oauth->accessProtectedResource();
